--- a/style.css
+++ b/style.css
@@ -22,8 +22,17 @@ body {
   margin: 20px 0; }
 
 h2.text-left,
-h1.text-left {
+h1.text-left,
+h5.mt-0 {
   font-family: 'Montserrat', sans-serif; }
+
+h3.text-left {
+  font-family: 'Leckerli One', cursive; }
+
+p.text-left {
+  font-size: 20px;
+  color: #636363;
+  max-width: 400px; }
 
 .btn {
   font-size: 14px !important;
@@ -55,29 +64,51 @@ h1.text-left {
   background-image: none;
   box-shadow: 0px 1px 10px #ffff00; }
 
-.align-self-start {
+.col.align-self-start {
   margin-top: 200px;
   padding: 0; }
 
-h2.text-left {
+.align-self-start h2.text-left {
   font-size: 31px; }
 
-h1.text-left {
+.align-self-start h1.text-left {
   font-size: 48px;
   text-transform: capitalize;
   font-weight: 900; }
-
-h3.text-left {
-  font-family: 'Leckerli One', cursive; }
-
-p.text-left {
-  font-size: 20px;
-  color: #636363;
-  max-width: 400px; }
 
 .btn.btn-dark {
   border-radius: 50px 50px;
   text-transform: uppercase;
   padding: 10px 30px; }
+
+.container-fluid {
+  background-color: #0081FF;
+  padding: 100px 0 50px; }
+
+.row {
+  color: #fff; }
+
+.row h2.text-left {
+  font-weight: 900;
+  font-size: 36px; }
+
+.row p.text-left {
+  max-width: 100%;
+  color: #fff;
+  margin-top: 80px; }
+
+div.container-fluid {
+  background-color: #007af3;
+  padding: 70px 0 30px; }
+
+.media img {
+  height: 60px; }
+
+h5.mt-0 {
+  font-weight: 700;
+  margin-bottom: 20px; }
+
+.media-body p {
+  font-size: 18px; }
 
 /*# sourceMappingURL=style.css.map */
