better than before

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -48,6 +48,15 @@ p.text-left {
 	font-weight: 700;
 	cursor: pointer;
 }
+.col.align-self-start,
+ul.social-menu {
+	padding: 0;
+}
+.col-md-10 p,
+.social-menu,
+.social-menu li {
+	display: inline-block;
+}
 
 
 // Navbar
@@ -81,7 +90,7 @@ p.text-left {
 // Intro
 .col.align-self-start {
 	margin-top: 200px;
-	padding: 0;
+
 }
 .align-self-start h2.text-left {
 	font-size: 31px;
@@ -100,11 +109,10 @@ p.text-left {
 // Section
 .container-fluid {
 	background-color: #0081FF;
-	padding: 100px 0 50px;
+	padding: 100px 0 60px;
 }
 .row {
 	color: $default;
-
 }
 .row h2.text-left {
 	font-weight: 900;
@@ -113,19 +121,45 @@ p.text-left {
 .row p.text-left {
 	max-width: 100%;
 	color: $default;
-	margin-top: 80px;
+	margin: 80px 0 0;
 }
+.row p.text-left:last-child {
+	margin-top: 0;
+}
+
+// Service
 div.container-fluid {
 	background-color: #007af3;
-	padding: 70px 0 30px;
+	padding: 80px 0 35px;
+	margin-top: 60px;
 }
 .media img {
 	height: 60px;
 }
 h5.mt-0 {
 	font-weight: 700;
-	margin-bottom: 20px;
+	margin-bottom: 25px;
 }
 .media-body p {
 	font-size: 18px;
+}
+
+// Social-Menu
+.social {
+	margin-top: 70px;
+}
+.col-md-4 p {
+	font-size: 20px;
+}
+.social-menu li a {
+	padding: 0 10px;
+}
+.social-menu li.active a i,
+.social-menu li a i:hover {
+	color: $default;
+}
+.social-menu li a i {
+	color: white;
+	font-size: 21px;
+	color: #3a9dff;
 }
