--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+h1, h2, h3, h4, h5, h6, p {
+  letter-spacing: 0.5px; }
+
 body {
   font-size: 14px; }
 
@@ -30,9 +33,9 @@ h3.text-left {
   font-family: 'Leckerli One', cursive; }
 
 p.text-left {
-  font-size: 20px;
+  font-size: 22px;
   color: #636363;
-  max-width: 400px; }
+  max-width: 450px; }
 
 .btn {
   font-size: 14px !important;
@@ -43,10 +46,8 @@ p.text-left {
 ul.social-menu {
   padding: 0; }
 
-.col-md-10 p,
-.social-menu,
-.social-menu li {
-  display: inline-block; }
+.col-md-4 p {
+  font-size: 21px; }
 
 .bg-dark {
   background-color: transparent !important; }
@@ -55,7 +56,7 @@ ul.social-menu {
   height: 50px; }
 
 .navbar-dark .navbar-nav .nav-link {
-  font-size: 16px;
+  font-size: 18px;
   padding: 0 20px;
   color: #fff; }
 
@@ -77,10 +78,10 @@ ul.social-menu {
   margin-top: 200px; }
 
 .align-self-start h2.text-left {
-  font-size: 31px; }
+  font-size: 34px; }
 
 .align-self-start h1.text-left {
-  font-size: 48px;
+  font-size: 51px;
   text-transform: capitalize;
   font-weight: 900; }
 
@@ -120,14 +121,11 @@ h5.mt-0 {
   font-weight: 700;
   margin-bottom: 25px; }
 
-.media-body p {
-  font-size: 18px; }
-
 .social {
   margin-top: 70px; }
 
-.col-md-4 p {
-  font-size: 20px; }
+.social-menu li {
+  display: inline-block; }
 
 .social-menu li a {
   padding: 0 10px; }
@@ -137,8 +135,8 @@ h5.mt-0 {
   color: #fff; }
 
 .social-menu li a i {
-  color: white;
-  font-size: 21px;
-  color: #3a9dff; }
+  font-size: 22px;
+  color: #3a9dff;
+  margin-top: 5px; }
 
 /*# sourceMappingURL=style.css.map */
