--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,7 @@ $heading: #0081ff;
 
 // Global
 h1, h2, h3, h4, h5, h6, p {
-	letter-spacing: 0.5px;
+	letter-spacing: 0.8px;
 }
 body {
 	font-size: 14px;
@@ -57,7 +57,7 @@ ul.social-menu {
 }
 
 .col-md-4 p {
-	font-size: 21px;
+	font-size: 17px;
 }
 
 // Navbar
@@ -73,7 +73,8 @@ ul.social-menu {
 	padding: 0 20px;
 	color: $default;
 }
-.navbar-dark .navbar-nav .nav-item.active .nav-link {
+.navbar-dark .navbar-nav .nav-item.active .nav-link,
+.navbar-dark .navbar-nav .nav-link:hover {
 	color: $active;
 }
 .btn-outline-warning {
