--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1, h2, h3, h4, h5, h6, p {
-  letter-spacing: 0.5px; }
+  letter-spacing: 0.8px; }
 
 body {
   font-size: 14px; }
@@ -47,7 +47,7 @@ ul.social-menu {
   padding: 0; }
 
 .col-md-4 p {
-  font-size: 21px; }
+  font-size: 17px; }
 
 .bg-dark {
   background-color: transparent !important; }
@@ -60,7 +60,8 @@ ul.social-menu {
   padding: 0 20px;
   color: #fff; }
 
-.navbar-dark .navbar-nav .nav-item.active .nav-link {
+.navbar-dark .navbar-nav .nav-item.active .nav-link,
+.navbar-dark .navbar-nav .nav-link:hover {
   color: #8799a3; }
 
 .btn-outline-warning {
