--- a/style.css
+++ b/style.css
@@ -8,12 +8,12 @@ body {
   background-image: url("assets/bg-header.jpg");
   background-size: 140%;
   background-position-y: -100px;
-  height: 800px;
+  height: 840px;
   padding: 0; }
 
 .opacity {
   background-color: rgba(0, 0, 0, 0.5);
-  height: 800px; }
+  height: 100%; }
 
 .container {
   width: 1040px;
@@ -27,11 +27,17 @@ body {
 h2.text-left,
 h1.text-left,
 h5.mt-0,
-p.card-text {
+p.card-text,
+.text-center h2 {
   font-family: 'Montserrat', sans-serif; }
 
-h3.text-left {
+h3.text-left,
+.text-center h3 {
   font-family: 'Leckerli One', cursive; }
+
+.text-center h2,
+.text-center h3 {
+  color: #fff; }
 
 p.text-left {
   font-size: 22px;
@@ -42,6 +48,7 @@ p.text-left {
   border-radius: 50px 50px;
   font-size: 12px !important;
   font-weight: 700;
+  text-transform: uppercase;
   cursor: pointer; }
 
 .col.align-self-start,
@@ -50,11 +57,6 @@ ul.social-menu {
 
 .col-md-4 p {
   font-size: 17px; }
-
-.Portofolio,
-.container-fluid.Portofolio {
-  background-color: #fff;
-  padding-bottom: 0; }
 
 .bg-dark {
   background-color: transparent !important; }
@@ -72,7 +74,6 @@ ul.social-menu {
   color: #8799a3; }
 
 .btn-outline-warning {
-  text-transform: uppercase;
   padding: 7px 25px;
   color: #ffff00 !important;
   border-color: #ffff00 !important;
@@ -80,11 +81,14 @@ ul.social-menu {
   background-image: none;
   box-shadow: 0px 1px 10px #ffff00; }
 
+.btn-outline-warning:hover {
+  color: #fff !important; }
+
 header .container:first-child {
   margin-top: 30px; }
 
 .col.align-self-start {
-  margin-top: 170px; }
+  margin-top: 150px; }
 
 .align-self-start h2.text-left {
   font-size: 34px; }
@@ -95,8 +99,12 @@ header .container:first-child {
   font-weight: 900; }
 
 .btn.btn-dark {
-  text-transform: uppercase;
-  padding: 12px 30px; }
+  padding: 12px 30px;
+  background-color: #1f1f1f;
+  border-color: #1f1f1f; }
+
+.btn.btn-dark:hover {
+  background-color: #3e3d3d; }
 
 .container-fluid {
   background-color: #0081FF;
@@ -148,6 +156,8 @@ h5.mt-0 {
   margin-top: 5px; }
 
 .container-fluid.Portofolio {
+  background-color: #fff;
+  padding-bottom: 0;
   margin: 0; }
 
 .Portofolio h2 {
@@ -161,7 +171,6 @@ h5.mt-0 {
   background-color: #1CBBB3 !important;
   border: none;
   margin-left: 80px;
-  text-transform: uppercase;
   padding: 15px 43px;
   box-shadow: 0 6px 20px #1cbbb3 !important; }
 
@@ -197,6 +206,10 @@ h5.mt-0 {
   transition: 0.5s ease; }
 
 .card-img-overlay:hover {
+  opacity: 1;
+  cursor: pointer; }
+
+.img-active {
   opacity: 1; }
 
 .card-img-overlay h6 {
@@ -210,6 +223,60 @@ h5.mt-0 {
 
 .card-img-overlay img {
   height: 15px;
-  margin: 10px 3px; }
+  margin: 10px 5px; }
+
+.main-testimonial {
+  background-image: url("assets/bg-client.jpg");
+  background-size: 145%;
+  height: 840px;
+  padding: 0; }
+
+.testimonial {
+  padding-top: 150px; }
+
+.text-center h3,
+.text-center h2 {
+  margin-bottom: 25px; }
+
+.text-center h2 {
+  font-weight: 900; }
+
+.carousel {
+  margin-top: 65px;
+  color: #fff; }
+
+.carousel-inner,
+.carousel-item .media p,
+.carousel-item .media h5 {
+  margin: 0; }
+
+.carousel-item p {
+  font-family: 'Coustard', serif;
+  font-size: 18px;
+  margin: 25px auto; }
+
+.carousel-item .media img {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  object-fit: cover; }
+
+.carousel-item .media h5 {
+  color: #fff000;
+  font-size: 13px; }
+
+.carousel-item .media p {
+  font-size: 13px;
+  margin-top: 3px; }
+
+.client-logo {
+  margin-top: 100px; }
+
+.client-logo img {
+  width: 150px; }
+
+.client-logo img:hover {
+  opacity: 0.7;
+  cursor: pointer; }
 
 /*# sourceMappingURL=style.css.map */
