better than before

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -300,10 +300,11 @@ h5.mt-0 {
 }
 .carousel-item .media p {
 	font-size: 13px;
-	margin-top: 5px;
+	margin-top: 5px!important;
+	color: #636363;
 }
 .client-logo {
-	margin-top: 80px;
+	margin: 80px 0 80px;
 }
 .client-logo .col-md-3 {
 	margin-top: 30px;
