--- a/scss/style.scss
+++ b/scss/style.scss
@@ -582,7 +582,8 @@ form a.btn {
 // Footer
 .footer {
 	background-color: rgba(0,0,0,0.5)!important;
-	padding: 70px 0 20px!important;
+	padding: 30px 0 0!important;
+	margin-top: 110px!important;
 }
 .footer .text-left {
 	font-size: 15px;
