--- a/style.css
+++ b/style.css
@@ -538,7 +538,8 @@ form a.btn {
 
 .footer {
   background-color: rgba(0, 0, 0, 0.5) !important;
-  padding: 70px 0 20px !important; }
+  padding: 30px 0 0 !important;
+  margin-top: 110px !important; }
 
 .footer .text-left {
   font-size: 15px;
